--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-swagger-doc": "^0.3.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swagger-ui-react": "^4.15.2"
   },
   "devDependencies": {
     "eslint": "8.15.0",
